--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   },
   "scripts": {
     "build": "babel src -d output"
+  },
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "rollup-plugin-babel": "^3.0.3"
   }
 }
