--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "rollup-plugin-buble": "^0.18.0"
+    "buble": "^0.18.0",
+    "buble-loader": "^0.4.1",
+    "rollup-plugin-buble": "^0.18.0",
+    "webpack": "^3.10.0"
   },
   "scripts": {
-    "build": "babel src -d output"
+    "build": "webpack"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
